--- a/hikehub/src/Components/EventCart/EventCart.module.css
+++ b/hikehub/src/Components/EventCart/EventCart.module.css
@@ -1,34 +1,43 @@
 .eventCart{
-    /* border: 1px solid red; */
-    height: 30em;
+    /*  */
+    height: 32em;
     width: 35em;
     min-width: 35em;
     border-radius: var(--border-radius);
-    box-shadow: -5px -5px 8px  5px rgba(0, 0, 0, 0.1);
+    box-shadow:1px 1px 2px  5px rgba(0, 0, 0, 0.05);
     justify-content: space-between;
     display: flex;
     flex-direction: column;
     padding-bottom: 15px;
+    gap:10px;
+    color: var(--text-color-dark-grey);
 }
 
 .eventImg{
     /* border: 2px solid black; */
     width: 100%;
-    height: 60%;
+    height: 50%;
     object-fit: cover;
     border-radius: var(--border-radius) var(--border-radius) 0  0;
 
 }
+.eventCart>h3{
+    /* border: 1px solid red; */
+    padding: 0em 1.5em;
+    font-size: 1.5em;
+
+}
 .details{
-    
-    height: 40%;
-    padding: 1.5em;
+    /* border: 1px solid red; */
+    height: 32%;
+    padding: 0em 1.5em;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 .detail{
-    
+    /* border: 1px solid red; */
+
     width: 45%;
     height: 50%;
     display: flex;
@@ -50,10 +59,30 @@
 }
 
 .date{
-    height: 7%;
-    font-size: 1.2em;
+    height: 50%;
+    font-size: 1.3em;
     text-align: center;
     font-weight: 400;
     color: var(--text-color-dark-grey);
+    width: 20%;
+    
+}
+
+.action{
+    /* border: 2px solid red; */
+    display: flex;
+    height: 12%;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.btn{
+    /*  */
+    height: 100%;
+    width: 25%;
+    cursor: pointer;
+    /* border: 1px solid red; */
+    border-radius: var(--border-radius);
+
 
 }
