--- a/hikehub/src/Layout/Footer/Footer.module.css
+++ b/hikehub/src/Layout/Footer/Footer.module.css
@@ -1,6 +1,13 @@
 .footer {
     background-color: var(--dark-green);
-    /* position: relative; */
+    position: relative;
+    /* background-image: url('../../assets/images/background.jpg'); */
+    object-fit: cover;
+    background-position: center center;
+    
+  }
+  .backgrd{
+
   }
   
   .container {
@@ -12,6 +19,13 @@
     padding: 30px 15px;
     gap: 30px;
     height: auto;
+    z-index: 4;
+    position: relative;
+
+    /* position: absolute;
+    height: 30rem;
+    bottom: 0;
+    left: 0; */
 
   }
   .backImg{
@@ -19,7 +33,20 @@
 z-index: 1;
 width: 100%;
 height: 100%;
-opacity: 1;
+/* opacity: 0.6; */
+object-fit: cover;
+  }
+
+  .opacity{
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.4); /* Adjust the opacity by changing the last value (0.1 in this example) */
   }
   
   .logoDescription {
@@ -28,10 +55,12 @@ opacity: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    z-index: 19;
   }
   .logoDescription img {
     width: 150px;
     margin-bottom: 20px;
+    
   }
   .logoDescription p {
     /* color: rgba(0, 0, 0, 0.60); */
@@ -58,6 +87,8 @@ opacity: 1;
     line-height: 18px;
     letter-spacing: 3px;
     text-transform: uppercase;
+    z-index: 19;
+
   }
   .links li:not(:last-child) {
     margin-bottom: 20px;
@@ -151,6 +182,8 @@ opacity: 1;
     font-weight: 400;
     text-align: center;
     padding: 45px;
+    z-index:4;
+    position: relative;
   }
   
   @media (max-width: 992px) {
