work on fetching

--- a/hikehub/src/Layout/Navbar/Navbar.module.css
+++ b/hikehub/src/Layout/Navbar/Navbar.module.css
@@ -5,6 +5,7 @@
     top: 0;
     z-index: 10;
     width: 100%;
+    /* border: 1px solid black; */
   }
   .headerTransparent{
     background-color:transparent;
@@ -259,4 +260,27 @@
   li {
     color: var(--main-text-color);
     text-decoration: none;
+  }
+
+  .logoutBtn{
+    border: 1px solid white;
+    border-radius: var(--border-radius);
+    background: transparent;
+    color: white;
+    width: 5.5em;
+    height: 2.2em;
+    font-size: 18px;
+    cursor: pointer;
+    margin-right: 5px;
+
+  }
+  .profileBtn{
+    border: 1px solid white;
+    border-radius: var(--border-radius);
+    background: transparent;
+    color: white;
+    width: 2.5em;
+    height: 2.2em;
+    font-size: 18px;
+    cursor: pointer;
   }
