--- a/hikehub/src/App.css
+++ b/hikehub/src/App.css
@@ -55,10 +55,11 @@ a {
   text-decoration: none;
 }
 
-/* ::-webkit-scrollbar {
-  width: 12px;
-  height: 12px;
-} */
+::-webkit-scrollbar {
+  /* width: 12px;
+  height: 12px; */
+  display: none;
+}
 
 * {
   box-sizing: border-box;
@@ -66,6 +67,6 @@ a {
   margin: 0;
 }
 
-/* ::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: #f1f1f1
-}  */
+} 
