--- a/hikehub/src/Components/Details/Details.module.css
+++ b/hikehub/src/Components/Details/Details.module.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   gap:1.5em;
+  position: relative;
   /* justify-content: space-between; */
 }
 .detailsUls{
@@ -67,4 +68,24 @@ padding: auto;
 .valueLists{
   list-style-type: disc; /* Use 'circle' for filled circles */
 margin-left: 30px;
+}
+
+.bookSection{
+  position: absolute;
+  bottom: 2%;
+  /* border: 1px solid red; */
+  width: 30%;
+  height: 14%;
+}
+.bookSection>button{
+  border-radius: var(--border-radius);
+  width: 100%;
+background-color: rgb(19, 57, 13);
+/* border: 2px solid black; */
+border: none;
+  height: 100%;
+  font-size: 20px;
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+
 }
