--- a/hikehub/src/Components/TitleSection/TitleSection.module.css
+++ b/hikehub/src/Components/TitleSection/TitleSection.module.css
@@ -1,7 +1,7 @@
 .titleSection{
     width: 100%;
     /* background-image: url('../../assets/images/akroum.jpeg'); */
-    height: 20em;
+    height: 18em;
     position: relative;
 }
 
@@ -29,5 +29,16 @@ object-fit: cover;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap:1em
+}
+.title>h1{
     font-size: 2.2em;
+
+}
+.date{
+    font-size: 1.8em;
+    font-weight: 400;
 }
