--- a/hikehub/src/Pages/Events/Events.module.css
+++ b/hikehub/src/Pages/Events/Events.module.css
@@ -1,5 +1,7 @@
 .eventsPage{
     /* border:2px solid black */
+    position: relative;
+
 }
 
 .eventsBody{
@@ -8,11 +10,14 @@
     display: flex;
     flex-direction: column;
     gap: 2em;
+    /* position: relative; */
+
+
     
 }
 
 .filterBar{
-     border: 1px solid red;
+     /* border: 1px solid red; */
      width: 100%;
      height: 7em;
 }
@@ -22,4 +27,15 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 4em;
+}
+.filterContainer{
+    height: 5.3em;
+    width: 60%;
+    position: fixed;
+    z-index: 7;
+left: 50%;
+transform: translate(-50%);
+    bottom: 1%;
+    border-radius: var(--border-radius);
+    /* display: flex; */
 }
