--- a/hikehub/src/Pages/Sign/Sign.module.css
+++ b/hikehub/src/Pages/Sign/Sign.module.css
@@ -31,6 +31,7 @@ flex-direction: column;
 gap: 2em;
 /* justify-content: center; */
 /* align-items: start; */
+border: 1px solid white;
 }
 
 .customButton {
@@ -69,7 +70,7 @@ gap: 2em;
     gap:1em;
     height: auto;
     justify-content: space-between;
-    height: 3.5em;
+    height: 3.2em;
 }
 
 .signTitle{
@@ -85,7 +86,7 @@ z-index: 1;
 color: white;
 font-size: 10em;
 color: transparent; 
--webkit-text-stroke: 1px white; 
+-webkit-text-stroke: 2px white; 
 /* display: inline-block; */
 /* border: 1px solid red;   */
 width: 6em;
@@ -98,4 +99,29 @@ text-align: center;
 display: flex;
 flex-direction: column;
 gap:15px
+}
+
+.textSection{
+    /* border: 1px solid red; */
+    font-size: 1.25em;
+    text-align: center;
+}
+.signLink{
+    text-decoration: none;
+    color: inherit;
+    font-weight: bold;
+    /* color: var(--lighter-green); */
+    font-style: italic;
+    text-decoration: underline;
+}
+
+.backImg{
+    position: absolute;
+    z-index: 2;
+    width: 1.3em;
+    height: 1.3em;
+    top:3%;
+    left: 2%;
+    cursor: pointer;
+
 }
