working on sideBar

--- a/hikehub/src/Layout/Footer/Footer.module.css
+++ b/hikehub/src/Layout/Footer/Footer.module.css
@@ -145,6 +145,7 @@ object-fit: cover;
     /* background: #FFF; */
     background-color: transparent;
     border: none;
+    color: white;
 
   }
   .inputBox .emailInput::placeholder {
