--- a/hikehub/src/Layout/Sidebar/DashSidebar.css
+++ b/hikehub/src/Layout/Sidebar/DashSidebar.css
@@ -2,16 +2,20 @@
 
 .css-12i7wg6-MuiPaper-root-MuiDrawer-paper {
     background-color:rgba(0, 0, 0, 0.7) !important;
+    /* background-color:white !important; */
+
     border-right:2px solid white !important ;
 }
 .goHome {
-    color: white;
+    color: white;   
     font-size: 22px;
     text-decoration: underline;
     transition: .3s;
 }
 .goHome:hover {
     color: rgb(227, 227, 227);
+    /* color: black; */
+
 }
 .activeLink{
     background-color: white !important;
