--- a/hikehub/src/Pages/Dashboard/Dashboard.module.css
+++ b/hikehub/src/Pages/Dashboard/Dashboard.module.css
@@ -3,7 +3,7 @@
     width: 100%;
     color: white;
     position: relative;
-    background-color: black;
+    /* background-color: black; */
 }   
 .dashImg{
     position: absolute;
@@ -19,7 +19,7 @@
     height: 100%;
     z-index: 2;
     object-fit: cover;
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: rgba(0, 0, 0, 0.915);
 }
 .outletClose{
     position: absolute;
