--- a/hikehub/src/Pages/Trails/Trails.module.css
+++ b/hikehub/src/Pages/Trails/Trails.module.css
@@ -1,11 +1,12 @@
-.actionDiv{
+.actionDiv {
     display: flex;
     /* border: 1px solid red; */
-    justify-content: space-between ;
+    justify-content: space-between;
     align-items: center;
     padding: 20px;
 }
-.btnAdd{
+
+.btnAdd {
     color: white;
     cursor: pointer;
     width: auto;
@@ -20,3 +21,86 @@
     padding: 15px;
 }
 
+.addForm {
+    /* border: 1px solid white; */
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1em
+}
+
+.addFormSection {
+    width: 100%;
+}
+
+.datasection {
+    /* border: 2px solid red; */
+
+    display: flex;
+    gap: 1em
+}
+
+.titleForm {
+
+    font-size: 1.4em;
+    display: flex;
+    /* justify-content: space-evenly; */
+}
+
+
+.inputsForm {
+    display: flex;
+    flex-direction: column;
+    /* height: 100%; */
+    gap: 1em
+}
+
+.imagesForm,
+.inputsForm {
+    /* border: 1px solid white; */
+    height: 100%;
+    width: 50%;
+}
+
+.imagesForm {
+    display: flex;
+    overflow-x: auto;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1em;
+}
+
+.storyImg {
+    /* width: 80%; */
+    height: 80%;
+    border-radius: var(--border-radius);
+    /* border: 1px solid red; */
+    position: relative;
+    flex: 0 0 70%;
+    /* Each image takes up 100% of the container width */
+
+
+}
+
+.inputFile {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    opacity: 0;
+}
+
+.imgg {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    object-fit: cover;
+    border-radius: var(--border-radius);
+}
+.nbsSection{
+    /* border: 1px solid white; */
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
