--- a/hikehub/src/Pages/Sign/Sign.module.css
+++ b/hikehub/src/Pages/Sign/Sign.module.css
@@ -9,6 +9,7 @@ position: absolute;
 width: 100%;
 height: 100%;
 object-fit: cover;
+z-index: 1;
 }
 
 .signForm{
@@ -25,13 +26,22 @@ object-fit: cover;
   padding: 2rem;
   /* background-color: rgba(255, 255, 255, 0.3); */
   background: transparent;
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(4px);
   display: flex;
 flex-direction: column;
 gap: 2em;
 /* justify-content: center; */
 /* align-items: start; */
-border: 1px solid white;
+/* border: 1px solid white; */
+z-index: 4;
+}
+.opacity{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 2;
+    background-color: rgba(0,0,0,0.3);
 }
 
 .customButton {
@@ -86,7 +96,7 @@ z-index: 1;
 color: white;
 font-size: 10em;
 color: transparent; 
--webkit-text-stroke: 2px white; 
+-webkit-text-stroke: 1px white; 
 /* display: inline-block; */
 /* border: 1px solid red;   */
 width: 6em;
@@ -98,7 +108,9 @@ height: 85%;
 text-align: center;
 display: flex;
 flex-direction: column;
-gap:15px
+gap:15px;
+z-index: 4;
+opacity: 0.7;
 }
 
 .textSection{
