--- a/hikehub/src/Components/Offering/Offering.module.css
+++ b/hikehub/src/Components/Offering/Offering.module.css
@@ -1,25 +1,27 @@
 .OfferingBox{
-    width: 80%;
+    width: 90%;
     /* border: 1px solid red; */
     display: flex;
     margin: 0 auto;
     padding: 1em;
-    box-shadow: 0 0 20px rgba(128, 128, 128, 0.1)
+    box-shadow: 0 0 20px rgba(128, 128, 128, 0.1);
+    justify-content: space-between;
+
 }
 .Offering{
     /* border: 1px solid red ; */
     display: flex;
     flex-direction: column;
-    gap:2.5em
+    gap:2.5em;
 
 }
 .offer{
-    width: calc(100%/3);
+    width: calc(90%/3);
     /* border: 1px solid black; */
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    /* justify-content: center; */
+    align-items: center;
+    justify-content: center;
     gap:1em
 }
 .offerImg{
@@ -34,4 +36,7 @@
     color:var(--gray-blue);
     font-size: 1.3em;
     line-height: 2;
+    text-align: center;
+    height: 40%;
+    /* border: 1px solid red; */
 }
