--- a/hikehub/src/Components/Team/Team.module.css
+++ b/hikehub/src/Components/Team/Team.module.css
@@ -30,6 +30,7 @@
     height: 20em;
     border-radius: var(--border-radius);
     width: 100%;
+    object-fit: cover;
 }
 .member>h3{
     font-size: 1.5em;
