--- a/hikehub/src/Components/Benefits/Benefits.module.css
+++ b/hikehub/src/Components/Benefits/Benefits.module.css
@@ -1,19 +1,21 @@
-.benefitsHolder{
+.benefitsHolder {
     /* border :2px solid green; */
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    gap:2em;
+    gap: 3em;
     height: 30em;
 }
 
-.benefits{
+.benefits {
     display: flex;
     justify-content: space-between;
     height: 85%;
-    
+    /* border: 2px solid red; */
+
 }
-.benefit{
+
+.benefit {
     /* border: 2px solid red; */
     width: 31%;
     height: 100%;
@@ -21,22 +23,32 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    gap: 1em;
 }
-.benefit>img{
-    width: 10em;
-    /* height: 12em; */
-    /* border: 1px solid red; */
-    height: 50%;
+
+
+
+.benefit>h3 {
+    font-size: 1.8em;
+    height: 15%;
 }
-.benefit>h3{
-font-size: 1.8em;
-height: 15%;
-}
-.benefit>p{
+
+.benefit>p {
     /* border: 1px solid rebeccapurple; */
     text-align: center;
     font-size: 1.4em;
     line-height: 2;
     height: 35%;
 
+}
+.icons{
+  height: 50%;
+  /* border: 1px solid red; */
+
+}
+.icons>img {
+    /* width: 10em; */
+    height: 100%;
+    height: 100%;
+    object-fit: contain;
 }
