--- a/hikehub/src/Components/EventCart/EventCart.module.css
+++ b/hikehub/src/Components/EventCart/EventCart.module.css
@@ -1,33 +1,53 @@
-.eventCart{
+.eventCart {
     /*  */
+    /* border: 1px solid red; */
     height: 32em;
-    width: 35em;
-    min-width: 35em;
+    width: 28em;
+    min-width: 30em;
     border-radius: var(--border-radius);
-    box-shadow:1px 1px 2px  5px rgba(0, 0, 0, 0.05);
+    box-shadow: 1px 1px 2px 5px rgba(0, 0, 0, 0.05);
     justify-content: space-between;
     display: flex;
     flex-direction: column;
     padding-bottom: 15px;
-    gap:10px;
+    gap: 10px;
     color: var(--text-color-dark-grey);
+    position: relative;
 }
 
-.eventImg{
+.opacity{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+    border-radius: var(--border-radius);
+    z-index: 1;
+
+}
+.eventImg {
     /* border: 2px solid black; */
     width: 100%;
-    height: 50%;
+    height: 55%;
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+position: relative;
+}
+
+.eventImg>img{
     object-fit: cover;
-    border-radius: var(--border-radius) var(--border-radius) 0  0;
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+    width: 100%;
+    height: 100%;
 
 }
-.eventCart>h3{
+
+.eventCart>h3 {
     /* border: 1px solid red; */
     padding: 0em 1.5em;
     font-size: 1.5em;
 
 }
-.details{
+
+.details {
     /* border: 1px solid red; */
     height: 32%;
     padding: 0em 1.5em;
@@ -35,7 +55,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
-.detail{
+
+.detail {
     /* border: 1px solid red; */
 
     width: 45%;
@@ -43,32 +64,34 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:1.4em;
+    gap: 1.4em;
     font-size: 1.1em;
     font-weight: 600;
     color: var(--text-color-dark-grey);
 }
-.detail>p{
+
+.detail>p {
     width: 50%;
-    
+
 }
-.eventIcons{
-    
+
+.eventIcons {
+
     height: 60%;
     width: 18%;
 }
 
-.date{
+.date {
     height: 50%;
     font-size: 1.3em;
     text-align: center;
     font-weight: 400;
     color: var(--text-color-dark-grey);
     width: 20%;
-    
+
 }
 
-.action{
+.action {
     /* border: 2px solid red; */
     display: flex;
     height: 12%;
@@ -76,10 +99,10 @@
     justify-content: space-evenly;
 }
 
-.btn{
+.btn {
     /*  */
     height: 100%;
-    width: 25%;
+    width: 30%;
     cursor: pointer;
     /* border: 1px solid red; */
     border-radius: var(--border-radius);
@@ -87,18 +110,26 @@
 
 }
 
-.titles{
+.titles {
     /* width: 80%;
     margin: 0 auto; */
-    padding: 0.5em 1.2em;
+    padding: 0.5em 1em;
     display: flex;
     /* border: 1px solid green; */
     justify-content: space-between;
+    height: 10%;
 }
-.titles>h3{
+
+.titles>h3 {
     /* border: 1px solid red; */
-    padding: 0em 1.5em;
+    /* padding: 0em 1em; */
+    text-align: center;
     font-size: 1.3em;
-    width: 45%;
-    height: 50%;
+    width: 48%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 100%;
+    white-space: nowrap;         /* Prevent text from wrapping */
+
+    /* max-height: 70%; */
 }
