--- a/hikehub/src/Components/heroAbout/About.module.css
+++ b/hikehub/src/Components/heroAbout/About.module.css
@@ -1,10 +1,13 @@
 .aboutSectionHolder{
     width: 100%;
     display: flex;
+    justify-content: space-between;
+}
+.aboutSection{
+    width: 50%;
 
 }
 .aboutSection , .imgSection{
-    width: 50%;
     height: 26em;
     display: flex;
     flex-direction: column;
@@ -14,12 +17,15 @@
 .imgSection{
     align-items: end;
     /* border: 1px solid red; */
+    width: 40%;
     justify-content: end;
+    position: relative;
+
 
 }
 .btnHolder{
     width: 20%;
-    height: 2.5em;
+    height: 3.2em;
 }
 .aboutText{
     font-size: 1.6em;
@@ -29,9 +35,32 @@
 .imgAbout{
     /* border: 1px solid red; */
     height: 100%;
-    width: 80%;
+    width: 100%;
     /* margin: 0 auto; */
     object-fit: cover;
     border-radius: var(--border-radius);
     /* border: 2px solid red ; */
+    
+}
+.play{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 2;
+    color: white;
+    cursor: pointer;
+    /* border: 2px solid white; */
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 5em;
+    height: 5em;
+    padding: auto;
+}
+.playIcong{
+    opacity: 0.5;
+    /* border: 1px solid red; */
+    position: relative;
 }
