--- a/hikehub/src/Layout/Navbar/Navbar.module.css
+++ b/hikehub/src/Layout/Navbar/Navbar.module.css
@@ -9,7 +9,7 @@
   }
   .headerTransparent{
     background-color:transparent;
-  
+  /* background-color: rgba(0,0,0,0.7); */
   }
   .imagee{
     width: 180px;
@@ -30,7 +30,7 @@
     justify-content: space-between;
     width: 90%;
     height: 90px;
-    z-index: 1000;
+    z-index: 10;
     background-color:transparent;
   
   }
@@ -41,7 +41,7 @@
     border: none;
     outline: none;
     border-radius: 4px;
-    color: white !important;
+    color: var( --nav-white-color) !important;
     cursor: pointer;
     font-size: 14px;  
   }
@@ -56,13 +56,13 @@
   }
   
   .menu li:nth-child(5) {
-    border-right: 1px solid white;
+    border-right: 1px solid var( --nav-white-color);
     padding-right: 0.75rem;
     margin-right: -0.75rem;
   }
   .menuItem{
     position: relative;
-    /* color: white; */
+    /* color: var( --nav-white-color); */
     text-decoration: none;
     transition: color 0.3s ease;
     font-size: 20px;
@@ -112,6 +112,7 @@
   .menu.active {
     left: 0;
   }
+
   
   .mobile_btn_blue{
    display: none;
@@ -176,7 +177,7 @@
       font-size: 18px;
     }
     .menu li:nth-child(5) {
-      border-right: 1px solid white;
+      border-right: 1px solid var( --nav-white-color);
       padding-right: 0.5rem;
       margin-right: -0.5rem;
     }
@@ -187,7 +188,7 @@
   @media screen and (max-width: 768px) {
     .mobile_btn {
       display: flex;
-      color: white;
+      color: var( --nav-white-color);
       cursor: pointer;
       right: 2.5rem;
       top: 50%;
@@ -215,7 +216,7 @@
       top: 0;
       width: 100%;
       height: 100vh;
-      background-color: rgba(255, 255, 255, 0.8); /* White background with 0.8 opacity */
+      background-color: rgba(255, 255, 255, 0.8); /* var( --nav-white-color) background with 0.8 opacity */
       backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
       z-index: 10;
       transition: left 1s;
@@ -263,22 +264,28 @@
   }
 
   .logoutBtn{
-    border: 1px solid white;
+    border: 1px solid var( --nav-white-color);
     border-radius: var(--border-radius);
     background: transparent;
-    color: white;
+    color: var( --nav-white-color);
     width: 5.5em;
     height: 2.2em;
     font-size: 18px;
     cursor: pointer;
     margin-right: 5px;
+    transition: 0.16s ease-in;
 
   }
+  .logoutBtn:hover , .profileBtn:hover{
+    
+    background-color: var(--dark-green);
+    border-color: var(--dark-green);
+  }
   .profileBtn{
-    border: 1px solid white;
+    border: 1px solid var( --nav-white-color);
     border-radius: var(--border-radius);
     background: transparent;
-    color: white;
+    color: var( --nav-white-color);
     width: 2.5em;
     height: 2.2em;
     font-size: 18px;
