--- a/hikehub/src/Pages/Sign/Sign.module.css
+++ b/hikehub/src/Pages/Sign/Sign.module.css
@@ -19,36 +19,35 @@ z-index: 1;
   transform: translateY(-50%); /* Center vertically */
   width: 33em; /* Maintain desired width */
   z-index: 1;
-
-  /* Styling */
-  /* border: 2px solid red; */
   color: white;
   padding: 2rem;
-  /* background-color: rgba(255, 255, 255, 0.3); */
-  background: transparent;
-  backdrop-filter: blur(4px);
+  /* background: transparent;
+  backdrop-filter: blur(4px); */
   display: flex;
 flex-direction: column;
 gap: 2em;
-/* justify-content: center; */
-/* align-items: start; */
-/* border: 1px solid white; */
 z-index: 4;
+
+background-color: rgba(255, 255, 255, 0.05);
+border: 2px solid rgba(255, 255, 255, 0.1);
+box-shadow: 0 0 5px rgba(8, 7, 16, 0.6);
+padding: 20px 40px;
+backdrop-filter: blur(10px);
 }
 .opacity{
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: 2;
-    background-color: rgba(0,0,0,0.3);
+    z-index: 1;
+    background-color: rgba(0,0,0,0.5);
 }
 
 .customButton {
     /* background-color: var(--dark-green); */
     background-color: white;
     color: var(--dark-green);
-    padding: 15px 20px;
+    /* padding: 15px 20px; */
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -62,7 +61,7 @@ z-index: 4;
 }
 .oauth{
     width: 15%;
-    background-image: url('../../assets/icons/google-removebg-preview.png');
+    /* background-image: url('../../assets/icons/google-removebg-preview.png'); */
     background-size: 2em ;
     background-position: center;
     background-repeat: no-repeat;
@@ -94,7 +93,7 @@ z-index: 4;
 position: absolute;
 z-index: 1;
 color: white;
-font-size: 10em;
+font-size: 9em;
 color: transparent; 
 -webkit-text-stroke: 1px white; 
 /* display: inline-block; */
@@ -102,15 +101,17 @@ color: transparent;
 width: 6em;
 text-overflow: clip;
 top: 50%; 
-left: 4%; 
+/* left: 4%;  */
+right: 6%;
 transform: translateY(-50%); 
-height: 85%;
+height: 75%;
 text-align: center;
 display: flex;
 flex-direction: column;
-gap:15px;
-z-index: 4;
-opacity: 0.7;
+gap:0px;
+z-index: 2;
+opacity: 0.9;
+/* border: 1px solid red;    */
 }
 
 .textSection{
@@ -136,4 +137,11 @@ opacity: 0.7;
     left: 2%;
     cursor: pointer;
 
+}
+
+.authProvider{
+    width: 100%;
+    height: 100%;
+    /* overflow: hidden; */
+    /* border: 5px solid red; */
 }
