--- a/hikehub/src/Components/Story/Story.module.css
+++ b/hikehub/src/Components/Story/Story.module.css
@@ -129,10 +129,13 @@
     width: 100vw;
     height: 100%;
     color: black;
-    border: 2px solid black;
+    /* border: 2px solid black;  */
     /* padding-top: 5.4em; */
     /* opacity: 0; */
     animation: fadeIn 0.5s ease-in-out;
+    gap:1em;
+    /* justify-content: center; */
+    padding :0 3em;
 
 }
 
@@ -142,6 +145,7 @@
 
 .storySection {
     height: 100%;
+    /* border: 1px solid black ; */
 }
 
 .storyImage {
