--- a/hikehub/src/Components/Story/Story.module.css
+++ b/hikehub/src/Components/Story/Story.module.css
@@ -1,13 +1,13 @@
 .gallery {
-    --webkit-column-count: 3;
+    /* --webkit-column-count: 3;
     --moz-column-count: 3;
     column-count: 3;
     --webkit-column-width: 33%;
     --moz-column-width: 33%;
-    column-width: 33%;
+    column-width: 33%; */
     padding: 0 12px;
     width: 50%;
-    height: 100%;
+    height: 100vh;
     /* display: flex;
     flex-direction: column;
     flex-wrap: wrap; */
@@ -17,8 +17,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 3em;
+    padding: 4em;
     gap: 2em;
+    /* border: 2px solid pink; */
+
 }
 .img1 , .img3 {
     margin-top: 3em;
@@ -47,7 +49,7 @@
 .model,
 .modelClose {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
@@ -71,11 +73,12 @@
 
 .closeModel {
     position: fixed;
-    top: 12%;
-    right: 5%;
+    top: 30%;
+    right: 15%;
     width: 2em;
     height: 2em;
     cursor: pointer;
+    background-color:black;
 }
 
 .showIMg {
@@ -126,32 +129,38 @@
 .story,
 .flexPage {
     display: flex;
-    width: 100vw;
-    height: 100%;
+    width: 100%;
+    margin: auto;
+    height: 90vh;
+    margin-bottom: 2rem;
     color: black;
-    /* border: 2px solid black;  */
+    /* border: 10px solid black;  */
     /* padding-top: 5.4em; */
     /* opacity: 0; */
     animation: fadeIn 0.5s ease-in-out;
     gap:1em;
-    /* justify-content: center; */
-    padding :0 3em;
+    /* justify-content: cente
+    r; */
+    /* padding :0 3em; */
 
 }
 
 .flexPage {
     flex-direction: row-reverse;
+
 }
 
 .storySection {
     height: 100%;
-    /* border: 1px solid black ; */
+    /* border: 10px solid rgb(253, 5, 5) ; */
 }
 
 .storyImage {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    /* border: 1px solid black ; */
+
 }
 
 .textSection {
@@ -159,12 +168,12 @@
     display: flex;
     flex-direction: column;
     gap: 2%;
-    padding: 7em 3em 3em 3em;
+    padding: 2em;
 
 }
 
 .storyTitle {
-    font-size: 4.5em;
+    font-size: 4em;
 
     text-wrap: wrap;
 }
@@ -199,31 +208,38 @@
 }
 
 .storyTestimonial {
-    border: 1px solid white;
+    border: 1px solid black;
     width: 55%;
     border-radius: var(--border-radius);
     height: 30%;
     align-self: center;
     position: relative;
-    z-index: 1;
+    z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 6%;
+    padding: 2%;
     font-size: 1.3em;
-
+    /* background-color: aqua; */
 }
 
-.storyTestimonial::after {
+/* .storyTestimonial::before {
     position: absolute;
     content: "";
-    border: 1px solid white;
+    border: 1px solid black;
     border-radius: var(--border-radius);
     width: 100%;
     height: 100%;
     top: 5%;
     left: 5%;
-    z-index: -1;
+    z-index: 1;
+    background-color: white;
+} */
+
+.testimonialsText{
+    color:black;
+    height: 90%;
+    /* border: 1px solid red; */
 }
 
 /***********************************************/
