--- a/hikehub/src/Pages/Events/Events.module.css
+++ b/hikehub/src/Pages/Events/Events.module.css
@@ -1,10 +1,10 @@
-.eventsPage{
+.eventsPage {
     /* border:2px solid black; */
     position: relative;
 
 }
 
-.eventsBody{
+.eventsBody {
     width: 85%;
     margin: 3em auto;
     display: flex;
@@ -15,35 +15,47 @@
     min-height: 60vh;
 
 
-    
+
 }
 
-.filterBar{
-     /* border: 1px solid red; */
-     width: 100%;
-     height: 7em;
+.filterBar {
+    /* border: 1px solid red; */
+    width: 100%;
+    height: 7em;
 }
 
-.events{
+.events {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 4em;
 }
-.filterContainer{
-    height: 5.3em;
+
+.filterContainer {
+    /* height: 5.3em; */
     width: 60%;
+    /* min-height: 5.3em; */
     position: fixed;
     z-index: 7;
-left: 50%;
-transform: translate(-50%);
+    left: 50%;
+    transform: translate(-50%);
     bottom: 1%;
     border-radius: var(--border-radius);
-    /* display: flex; */
+    min-height: 5.3em;
+
 }
 
+.filterContainerClose{
+    min-height: 5.3em;
+    transition: 0.3s ease-in;
 
-.loadingDiv{
+}
+.filterContainerOpen{
+    transition: 0.3s ease-in;
+
+}
+
+.loadingDiv {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -51,6 +63,7 @@ transform: translate(-50%);
     align-items: center;
 
 }
+
 .loader {
     width: fit-content;
     font-weight: bold;
@@ -59,14 +72,45 @@ transform: translate(-50%);
     padding-bottom: 8px;
     background: linear-gradient(currentColor 0 0) 0 100%/0% 3px no-repeat;
     animation: l2 2s linear infinite;
-    /* width: 50%;
-    height: 50%; */
-    /* position: absolute; */
 
-  
-  }
-  .loader:before {
-    content:"Loading..."
+}
+
+.loader:before {
+    content: "Loading..."
+
+}
+
+@keyframes l2 {
+    to {
+        background-size: 100% 3px
+    }
+}
+
+
+@media (max-width:1300px) {
+    .filterContainer {
+        width: 75%;
+    }
+}
+@media (max-width:960px) {
+    .filterContainer {
+        width: 85%;
+    }
+}
+
+@media (max-width:830px) {
+    .filterContainer {
+        width: 60%;
+    }
+
+    .filterContainerOpen{
+        height: 55vh;
+        transition: 0.2s ease-in;
+    }
+    .filterContainerClose{
+       height: 5.3em;
+       min-height: 5.3em;
+    }
     
-  }
-  @keyframes l2 {to{background-size: 100% 3px}}
+
+}
