--- a/hikehub/src/Pages/Stories/Stories.module.css
+++ b/hikehub/src/Pages/Stories/Stories.module.css
@@ -1,6 +1,8 @@
 .storyPage{
     position: relative;
-    height:100%;
+    height: calc(100ch - 4.3em); /* Assuming font size is 16px */
+    margin-top: 5.6em;
+    /* border: 5px solid black; */
 }
 
 .backImg{
@@ -24,11 +26,15 @@
     z-index: 4;
     position: absolute;
 
+
 }
 .oneStory{
-    height: 100vh;
+    height: 95%;
+    width: 95%;
+    margin: 0 auto;
     z-index: 3;
     position: relative;
+    /* border: 2px solid red; */
 }
 
 .loadingDiv{
@@ -57,3 +63,38 @@
     content:"Loading..." 
   }
   @keyframes l2 {to{background-size: 100% 3px}}
+
+  .rightarrow{
+    position: absolute;
+    top: 50%;
+    right: 2%;
+    transform: translate(0%,-50%);
+    z-index: 2;
+    cursor: pointer;
+    /* border: 2px solid red; */
+    /* background-color: rgba(0,0,0,0.8); */
+    width: 19em;
+    height: 4.5em;
+}
+
+.leftarrow{
+    position: absolute;
+    top: 50%;
+    left: 2%;
+    transform: translate(0%,-50%);
+    z-index: 2;
+    cursor: pointer;
+    /* border: 2px solid red; */
+    /* background-color: rgba(0,0,0,0.8); */
+    width: 4.5em;
+    height: 4.5em;
+}
+
+.slider{
+    height: 100vh;
+    padding: 1em;
+    width: 95%;
+    
+    margin: 0 auto;
+    /* border: 1000px solid rgb(0, 8, 255); */
+}
