--- a/hikehub/src/Components/Story/Story.module.css
+++ b/hikehub/src/Components/Story/Story.module.css
@@ -1,25 +1,12 @@
 .gallery {
-    /* --webkit-column-count: 3;
-    --moz-column-count: 3;
-    column-count: 3;
-    --webkit-column-width: 33%;
-    --moz-column-width: 33%;
-    column-width: 33%; */
     padding: 0 12px;
     width: 50%;
     height: 100vh;
-    /* display: flex;
-    flex-direction: column;
-    flex-wrap: wrap; */
-    /* border: 2px solid red; */
-    /* column-gap: 24px; */
-    /* Adjust the gap as needed */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding: 4em;
     gap: 2em;
-    /* border: 2px solid pink; */
 
 }
 .img1 , .img3 {
@@ -36,10 +23,6 @@
     height: auto;
     width: 40%;
     height: 45%;
-    /* width: calc(33.33% - 8px); */
-    /* width: 100%; */
-    /* Adjust the width as needed, considering the column gap */
-    /* border: 2px solid red; */
 }
 
 .pics:hover {
@@ -50,7 +33,7 @@
 .modelClose {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     display: flex;
@@ -68,7 +51,7 @@
 .modelOpen {
     visibility: visible;
     opacity: 1;
-    transform: scale(1)
+    transform: scale(1);
 }
 
 .closeModel {
@@ -78,7 +61,6 @@
     width: 2em;
     height: 2em;
     cursor: pointer;
-    background-color:black;
 }
 
 .showIMg {
@@ -86,7 +68,6 @@
     max-width: 100%;
     height:auto;
     display: block;
-    /* box-sizing: border-box; */
     padding: 20px;
     margin: 0 auto;
 }
@@ -134,14 +115,9 @@
     height: 90vh;
     margin-bottom: 2rem;
     color: black;
-    /* border: 10px solid black;  */
-    /* padding-top: 5.4em; */
-    /* opacity: 0; */
     animation: fadeIn 0.5s ease-in-out;
     gap:1em;
-    /* justify-content: cente
-    r; */
-    /* padding :0 3em; */
+    position: relative;
 
 }
 
